css/main.css
/* global settings */
*, *:before, *:after {
  box-sizing: border-box;
}
body {
  background-color: #cacaca;
  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
  font-size: 10px;
  color: #666;
}
nav {
  background-color: #00829A;
}
nav, .status-bar {
  background-color: #00829A;
  width: 100%;
}
.fe-challenge {
  width: 375px;
  height: 667px;
  margin: 0 auto;
  overflow: scroll;
  background-color: #fff;
}
.status-bar img {
  max-width: 100%;
  padding: 5px;
}
nav {
  height: 5em;
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  padding: 1em;
  color: #fff;
}
nav button {
  background-color: transparent;
  border: 0;
  height: 2em;
}
.app {
  margin-left: 2em;
}
.bus {
  display: flex;
  justify-content: space-between;
}
.bus-info {
  margin-left: 2em;
  width: 100%;
  font-size: 1em;
}
.bus-icon {
  width: 13.1em;
  background-repeat: no-repeat;
  background-image: url(../images/bus-icon.png);
}
.filter button {
  font-size: 2em;
  color: #a1a1a1;
  border: 1px solid #a1a1a1; 
  margin: 0 .5em .5em 0;
  padding: .5em;
  border-radius: 10px;
}
.list-headings {
  font-weight: 600;
  display: flex;
  justify-content: space-between;
  padding-right: 3.5em;
}

/* typography */
h1, h2 {
  font-size: 2em;
  font-weight: 600;
}
h1 {
  margin: 1em 0 .5em 0;
  color: red;
}
.arriving h2,.filter h2,.bus-listings h2 {
  margin: 1em 0 .5em 0;
}
/*h2 {
  padding: 1em 0 .5em 0;
}*/
h3 {
  height: 30px;
  font-size: 1.5em;
  width: 100%;
  font-weight: 600;
  text-transform: uppercase;
  background-color: #EFEFF4;
  color: #00829A;
  padding: .5em 1em;
}
ul {
  font-size: 2em;
  display: flex;
}
.bus-line {
  font-size: 2em;
  font-weight: 600;
}
.bus-freq {
  font-size: .75em;
  font-style: italic;
}

/* image and icon styles */


.test {
  min-height: 10em;
  padding: 2em;
  align-items: baseline;
}
/* flexbox shenanigans */
.line {
  order: 1;
  width: 22%;
}
.freq {
  order: 2;
  width: 41%;
}
.dest {
  order: 3;
  width: 30%;
}
.arr {
  order: 4;
}
.arrow {
  order: 5;
}

